adjust spacing for times, fixed content text from being cutoff

--- a/sass/tickets.scss
+++ b/sass/tickets.scss
@@ -60,7 +60,7 @@ section.content td {
 	text-align: center;
 }
 
-.row-header p{
+.row-header p {
 	padding: 2px;
 }
 
@@ -135,7 +135,7 @@ a:hover {
 		font-size: 20px;
 	}
 
-	table.pricing-grid{
+	table.pricing-grid {
 		margin-left: -5px;
 		width: 320px;
 
@@ -143,6 +143,15 @@ a:hover {
 
 	td {
 		border: solid 4px #ffffff;
+	}
+
+	td.bg-light-grey.grey-cell {
+		font-size: 16px;
+	}
+
+	p.general-info {
+		width: 303px;
+		margin-left: 9px;
 	}
 }
 
